[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 45.0
margin_top = 264.0
margin_right = 127.0
margin_bottom = 284.0
rect_scale = Vector2( 0.872461, 2.48804 )
text = "pergunta2"

[node name="texto" type="LineEdit" parent="."]
margin_left = 6.0
margin_top = 80.0
margin_right = 64.0
margin_bottom = 104.0

[node name="texto2" type="LineEdit" parent="."]
margin_left = 95.0
margin_top = 81.0
margin_right = 153.0
margin_bottom = 105.0

[node name="texto3" type="LineEdit" parent="."]
margin_left = 5.0
margin_top = 142.0
margin_right = 63.0
margin_bottom = 166.0

[node name="texto4" type="LineEdit" parent="."]
margin_left = 96.0
margin_top = 140.0
margin_right = 154.0
margin_bottom = 164.0

[node name="texto5" type="LineEdit" parent="."]
margin_left = 53.0
margin_top = 199.0
margin_right = 111.0
margin_bottom = 223.0

[node name="resposta" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 208.0
margin_top = 97.0
margin_right = 248.0
margin_bottom = 111.0
rect_scale = Vector2( 2.23973, 2.61504 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = 207.0
margin_top = 95.0
margin_right = 313.0
margin_bottom = 172.0
rect_scale = Vector2( 3.2926, 0.728586 )

[node name="Label" type="Label" parent="."]
margin_left = 276.0
margin_top = 57.0
margin_right = 331.0
margin_bottom = 71.0
rect_scale = Vector2( 1.72198, 2.16322 )
text = "resposta"

[node name="Button2" type="Button" parent="."]
margin_left = 67.0
margin_top = 426.0
margin_right = 79.0
margin_bottom = 446.0
rect_scale = Vector2( 1.65022, 2.7277 )
text = "pergunta1"

[node name="Label2" type="Label" parent="."]
margin_left = 212.0
margin_top = 428.0
margin_right = 252.0
margin_bottom = 442.0
rect_scale = Vector2( 4.37024, 3.7211 )

[node name="Button3" type="Button" parent="."]
margin_left = 64.0
margin_top = 503.0
margin_right = 140.0
margin_bottom = 523.0
rect_scale = Vector2( 1.69647, 2.7162 )
text = "pergunta3"

[node name="Label3" type="Label" parent="."]
margin_left = 206.0
margin_top = 504.0
margin_right = 246.0
margin_bottom = 518.0
rect_scale = Vector2( 4.37024, 3.7211 )

[node name="resp4" type="LineEdit" parent="."]
margin_left = 381.0
margin_top = 325.0
margin_right = 439.0
margin_bottom = 349.0
rect_scale = Vector2( 1.48902, 1.37495 )

[node name="Button4" type="Button" parent="."]
margin_left = 378.0
margin_top = 367.0
margin_right = 454.0
margin_bottom = 387.0
rect_scale = Vector2( 1.24585, 1.64765 )
text = "pergunta4"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 495.0
margin_top = 331.0
margin_right = 535.0
margin_bottom = 371.0
rect_scale = Vector2( 7.14819, 1.34832 )

[node name="Label4" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 503.0
margin_top = 343.0
margin_right = 547.0
margin_bottom = 357.0
rect_scale = Vector2( 2.9816, 2.08227 )

[node name="Label5" type="Label" parent="."]
margin_left = 540.0
margin_top = 295.0
margin_right = 595.0
margin_bottom = 309.0
rect_scale = Vector2( 1.44592, 2.00147 )
text = "resposta"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
